@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'mode' ro render facet
+
 1.302121  2018-02-04 13:27:41-08:00 America/Los_Angeles
 
     - Update Copyright
